Add service monitor for prometheus-operator

--- a/prometheus-operator/values.yaml
+++ b/prometheus-operator/values.yaml
@@ -48,6 +48,9 @@ securityContext:
 nodeSelector: {}
 #  kubernetes.io/os: linux
 
+serviceMonitor:
+  enabled: true
+
 # ---------------------------------------------------------
 # Config reloader
 # ---------------------------------------------------------
