Add prometheus rules to prometheus-operator helm chart

--- a/charts/prometheus-operator/values.yaml
+++ b/charts/prometheus-operator/values.yaml
@@ -51,6 +51,10 @@ nodeSelector: {}
 serviceMonitor:
   enabled: true
 
+rules:
+  enabled: true
+  disabled: {}
+
 # ---------------------------------------------------------
 # Config reloader
 # ---------------------------------------------------------
