Add copyright notice to the auto generated files

--- a/charts/prometheus/templates/prometheus_rule.yaml
+++ b/charts/prometheus/templates/prometheus_rule.yaml
@@ -1,5 +1,9 @@
 {{ $job := include "prometheus.fullname" . }}
 {{ $namespace := .Release.Namespace }}
+# Copyright 2024 Hauki Tech sp. z o.o.
+# SPDX-License-Identifier: Apache-2.0
+# This file is generated based on the source code of the https://github.com/prometheus-operator/kube-prometheus/
+# project, that is licensed under terms of the Apache License 2.0
 apiVersion: monitoring.coreos.com/v1
 kind: PrometheusRule
 metadata:
