--- a/artifacthub-repo.yml
+++ b/artifacthub-repo.yml
@@ -2,6 +2,8 @@ repositoryID: 1447667e-1ec2-411c-8c83-3cb5e308681d
 owners:
   - name: rprykhodchenko
     email: rprykhodchenko@hauki.tech
+  - name: osaprykin
+    email: osaprykin@hauki.tech
 # ignore: # (optional, packages that should not be indexed by Artifact Hub)
 #   - name: package1
 #   - name: package2 # Exact match
