--- a/charts/monitoring-stack/Chart.yaml
+++ b/charts/monitoring-stack/Chart.yaml
@@ -5,10 +5,12 @@ type: application
 version: 0.1.0
 
 dependencies:
-  - name: haukitech/prometheus-operator
+  - name: prometheus-operator
     version: '*'
+    repository: https://haukitech.github.io/helm-charts/
     condition: dependencies.prometheusOperator
 
-  - name: haukitech/prometheus
+  - name: prometheus
     version: '*'
+    repository: https://haukitech.github.io/helm-charts/
     condition: dependencies.prometheus
