--- a/charts/prometheus-operator/templates/prometheus_rule.yaml
+++ b/charts/prometheus-operator/templates/prometheus_rule.yaml
@@ -1,9 +1,9 @@
-{{ $job := include "prometheus-operator.fullname" . }}
-{{ $namespace := .Release.Namespace }}
 # Copyright 2024 Hauki Tech sp. z o.o.
 # SPDX-License-Identifier: Apache-2.0
 # This file is generated based on the source code of the https://github.com/prometheus-operator/kube-prometheus/
 # project, that is licensed under terms of the Apache License 2.0
+{{ $job := include "prometheus-operator.fullname" . }}
+{{ $namespace := .Release.Namespace }}
 apiVersion: monitoring.coreos.com/v1
 kind: PrometheusRule
 metadata:
@@ -23,7 +23,7 @@ spec:
         runbook_url: https://runbooks.prometheus-operator.dev/runbooks/prometheus-operator/prometheusoperatorlisterrors
         summary: Errors while performing list operations in controller.
       expr: |
-        (sum by (cluster,controller,namespace) (rate(prometheus_operator_list_operations_failed_total{job="prometheus-operator",namespace="{{ $namespace }}"}[10m])) / sum by (cluster,controller,namespace) (rate(prometheus_operator_list_operations_total{job="prometheus-operator",namespace="{{ $namespace }}"}[10m]))) > 0.4
+        (sum by (cluster,controller,namespace) (rate(prometheus_operator_list_operations_failed_total{job="{{ $job }}",namespace="{{ $namespace }}"}[10m])) / sum by (cluster,controller,namespace) (rate(prometheus_operator_list_operations_total{job="{{ $job }}",namespace="{{ $namespace }}"}[10m]))) > 0.4
       for: 15m
       labels:
         severity: warning
@@ -36,7 +36,7 @@ spec:
         runbook_url: https://runbooks.prometheus-operator.dev/runbooks/prometheus-operator/prometheusoperatorwatcherrors
         summary: Errors while performing watch operations in controller.
       expr: |
-        (sum by (cluster,controller,namespace) (rate(prometheus_operator_watch_operations_failed_total{job="prometheus-operator",namespace="{{ $namespace }}"}[5m])) / sum by (cluster,controller,namespace) (rate(prometheus_operator_watch_operations_total{job="prometheus-operator",namespace="{{ $namespace }}"}[5m]))) > 0.4
+        (sum by (cluster,controller,namespace) (rate(prometheus_operator_watch_operations_failed_total{job="{{ $job }}",namespace="{{ $namespace }}"}[5m])) / sum by (cluster,controller,namespace) (rate(prometheus_operator_watch_operations_total{job="{{ $job }}",namespace="{{ $namespace }}"}[5m]))) > 0.4
       for: 15m
       labels:
         severity: warning
@@ -49,7 +49,7 @@ spec:
         runbook_url: https://runbooks.prometheus-operator.dev/runbooks/prometheus-operator/prometheusoperatorsyncfailed
         summary: Last controller reconciliation failed
       expr: |
-        min_over_time(prometheus_operator_syncs{status="failed",job="prometheus-operator",namespace="{{ $namespace }}"}[5m]) > 0
+        min_over_time(prometheus_operator_syncs{status="failed",job="{{ $job }}",namespace="{{ $namespace }}"}[5m]) > 0
       for: 10m
       labels:
         severity: warning
@@ -63,7 +63,7 @@ spec:
         runbook_url: https://runbooks.prometheus-operator.dev/runbooks/prometheus-operator/prometheusoperatorreconcileerrors
         summary: Errors while reconciling objects.
       expr: |
-        (sum by (cluster,controller,namespace) (rate(prometheus_operator_reconcile_errors_total{job="prometheus-operator",namespace="{{ $namespace }}"}[5m]))) / (sum by (cluster,controller,namespace) (rate(prometheus_operator_reconcile_operations_total{job="prometheus-operator",namespace="{{ $namespace }}"}[5m]))) > 0.1
+        (sum by (cluster,controller,namespace) (rate(prometheus_operator_reconcile_errors_total{job="{{ $job }}",namespace="{{ $namespace }}"}[5m]))) / (sum by (cluster,controller,namespace) (rate(prometheus_operator_reconcile_operations_total{job="{{ $job }}",namespace="{{ $namespace }}"}[5m]))) > 0.1
       for: 10m
       labels:
         severity: warning
@@ -77,7 +77,7 @@ spec:
         runbook_url: https://runbooks.prometheus-operator.dev/runbooks/prometheus-operator/prometheusoperatorstatusupdateerrors
         summary: Errors while updating objects status.
       expr: |
-        (sum by (cluster,controller,namespace) (rate(prometheus_operator_status_update_errors_total{job="prometheus-operator",namespace="{{ $namespace }}"}[5m]))) / (sum by (cluster,controller,namespace) (rate(prometheus_operator_status_update_operations_total{job="prometheus-operator",namespace="{{ $namespace }}"}[5m]))) > 0.1
+        (sum by (cluster,controller,namespace) (rate(prometheus_operator_status_update_errors_total{job="{{ $job }}",namespace="{{ $namespace }}"}[5m]))) / (sum by (cluster,controller,namespace) (rate(prometheus_operator_status_update_operations_total{job="{{ $job }}",namespace="{{ $namespace }}"}[5m]))) > 0.1
       for: 10m
       labels:
         severity: warning
@@ -90,7 +90,7 @@ spec:
         runbook_url: https://runbooks.prometheus-operator.dev/runbooks/prometheus-operator/prometheusoperatornodelookuperrors
         summary: Errors while reconciling Prometheus.
       expr: |
-        rate(prometheus_operator_node_address_lookup_errors_total{job="prometheus-operator",namespace="{{ $namespace }}"}[5m]) > 0.1
+        rate(prometheus_operator_node_address_lookup_errors_total{job="{{ $job }}",namespace="{{ $namespace }}"}[5m]) > 0.1
       for: 10m
       labels:
         severity: warning
@@ -103,7 +103,7 @@ spec:
         runbook_url: https://runbooks.prometheus-operator.dev/runbooks/prometheus-operator/prometheusoperatornotready
         summary: Prometheus operator not ready
       expr: |
-        min by (cluster,controller,namespace) (max_over_time(prometheus_operator_ready{job="prometheus-operator",namespace="{{ $namespace }}"}[5m]) == 0)
+        min by (cluster,controller,namespace) (max_over_time(prometheus_operator_ready{job="{{ $job }}",namespace="{{ $namespace }}"}[5m]) == 0)
       for: 5m
       labels:
         severity: warning
@@ -117,7 +117,7 @@ spec:
         runbook_url: https://runbooks.prometheus-operator.dev/runbooks/prometheus-operator/prometheusoperatorrejectedresources
         summary: Resources rejected by Prometheus operator
       expr: |
-        min_over_time(prometheus_operator_managed_resources{state="rejected",job="prometheus-operator",namespace="{{ $namespace }}"}[5m]) > 0
+        min_over_time(prometheus_operator_managed_resources{state="rejected",job="{{ $job }}",namespace="{{ $namespace }}"}[5m]) > 0
       for: 5m
       labels:
         severity: warning
