Fix issues in helm charts
- Rename `config` to `spec` in prometheus helm chart values.
- Restrict additional top level properties in json schema.
- Add missing fields in json schema.

--- a/charts/alertmanager/values.yaml
+++ b/charts/alertmanager/values.yaml
@@ -48,7 +48,7 @@ config:
   templates:
     - '/etc/alertmanager/config/*.tmpl'
 
-templateFiles: []
+templateFiles: {}
 
 serviceMonitor:
   enabled: true
