--- a/charts/prometheus-operator/values.yaml
+++ b/charts/prometheus-operator/values.yaml
@@ -53,6 +53,7 @@ serviceMonitor:
 
 rules:
   enabled: true
+  # TODO(cutwater): Rename to avoid confusion
   disabled: {}
 
 # ---------------------------------------------------------
