--- a/charts/monitoring-stack/Chart.yaml
+++ b/charts/monitoring-stack/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: monitoring-stack
 description: Hauki Tech Monitoring Stack
 type: application
-version: 0.1.2
+version: 0.1.3
 
 dependencies:
   - name: prometheus-operator
@@ -19,3 +19,8 @@ dependencies:
     version: 0.1.1
     repository: https://haukitech.github.io/helm-charts/
     condition: dependencies.alertmanager
+
+  - name: kube-state-metrics
+    version: 5.27.0
+    repository: https://prometheus-community.github.io/helm-charts
+    condition: dependencies.kubeStateMetrics
