--- a/charts/monitoring-stack/Chart.yaml
+++ b/charts/monitoring-stack/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: monitoring-stack
 description: Hauki Tech Monitoring Stack
 type: application
-version: 0.1.3
+version: 0.1.4
 
 dependencies:
   - name: prometheus-operator
@@ -24,3 +24,9 @@ dependencies:
     version: 5.27.0
     repository: https://prometheus-community.github.io/helm-charts
     condition: dependencies.kubeStateMetrics
+
+  - name: prometheus-node-exporter
+    version: 4.42.0
+    repository: https://prometheus-community.github.io/helm-charts
+    alias: node-exporter
+    condition: dependencies.nodeExporter
