prometheus: Fix long descriptions, change rule settings
- Ensure variable substitution is not broken by a newline in long rule
  descriptions.
- Use list of excluded rule name instead of a dictionary.

--- a/charts/prometheus/values.yaml
+++ b/charts/prometheus/values.yaml
@@ -60,5 +60,6 @@ serviceMonitor:
 
 rules:
   enabled: true
-  # TODO(cutwater): Rename to avoid confusion
-  disabled: {}
+  excluded: []
+  #  - "RuleName1"
+  #  - "RuleName2"
