--- a/charts/prometheus/templates/cluster_role.yaml
+++ b/charts/prometheus/templates/cluster_role.yaml
@@ -5,19 +5,29 @@ metadata:
   labels:
     {{- include "prometheus.labels" . | nindent 4 }}
 rules:
-- apiGroups: [""]
+- apiGroups:
+  - ""
   resources:
   - nodes
   - nodes/metrics
   - services
   - endpoints
   - pods
-  verbs: ["get", "list", "watch"]
+  verbs:
+  - get
+  - list
+  - watch
 - apiGroups:
   - extensions
   - networking.k8s.io
   resources:
   - ingresses
-  verbs: ["get", "list", "watch"]
-- nonResourceURLs: ["/metrics", "/metrics/cadvisor"]
-  verbs: ["get"]
+  verbs:
+  - get
+  - list
+  - watch
+- nonResourceURLs:
+  - /metrics
+  - /metrics/cadvisor
+  verbs:
+  - get
