alertmanager: Fix long descriptions, change rule settings

--- a/charts/alertmanager/values.yaml
+++ b/charts/alertmanager/values.yaml
@@ -55,5 +55,6 @@ serviceMonitor:
 
 rules:
   enabled: true
-  disabled: {}
-  # RuleName: true
+  excluded: []
+  #  - "RuleName1"
+  #  - "RuleName2"
