--- a/tools/pyproject.toml
+++ b/tools/pyproject.toml
@@ -6,5 +6,14 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "httpx>=0.27.2",
+    "jinja2>=3.1.5",
     "pyyaml>=6.0.2",
 ]
+
+[dependency-groups]
+dev = [
+    "ruff>=0.8.4",
+]
+
+[tool.ruff]
+line-length = 100
