Update examples, delete unused examples

--- a/examples/helmfile.yaml
+++ b/examples/helmfile.yaml
@@ -11,4 +11,4 @@ releases:
     # chart: haukitech/monitoring-stack
     chart: ../charts/monitoring-stack
     values:
-      - ./monitoring-stack.yaml
+      - ./values.yaml
