feature(monitoring-stack): Exclude groups in prometheus rules
When excluding all rules in a group, this will lead to
a template rendering failure.

--- a/charts/monitoring-stack/templates/kube-state-metrics/prometheus_rule.yaml
+++ b/charts/monitoring-stack/templates/kube-state-metrics/prometheus_rule.yaml
@@ -16,6 +16,7 @@ metadata:
     {{- include "monitoring-stack.kube-state-metrics.labels" . | nindent 4 }}
 spec:
   groups:
+  {{- if not ( has "kube-state-metrics" .Values.kubeStateMetrics.rules.excludedGroups ) }}
   - name: kube-state-metrics
     rules:
     {{- if not ( has "KubeStateMetricsListErrors" .Values.kubeStateMetrics.rules.excluded ) }}
@@ -75,4 +76,5 @@ spec:
       labels:
         severity: critical
     {{- end }}
+  {{- end }}
 {{- end }}
