fix(monitoring-stack): Fix kube-apiserver service monitor

--- a/charts/monitoring-stack/templates/kube-apiserver/service_monitor.yaml
+++ b/charts/monitoring-stack/templates/kube-apiserver/service_monitor.yaml
@@ -72,7 +72,7 @@ spec:
     tlsConfig:
       caFile: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
       serverName: kubernetes
-  jobLabel: app.kubernetes.io/name
+  jobLabel: component
   namespaceSelector:
     matchNames:
     - default
