--- a/charts/prometheus-operator/crds/monitoring.coreos.com_prometheuses.yaml
+++ b/charts/prometheus-operator/crds/monitoring.coreos.com_prometheuses.yaml
@@ -5,6 +5,7 @@ metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.16.1
     operator.prometheus.io/version: 0.77.1
+    argocd.argoproj.io/sync-options: ServerSideApply=true
   name: prometheuses.monitoring.coreos.com
 spec:
   group: monitoring.coreos.com
